fix:remove scrollbars

--- a/style.css
+++ b/style.css
@@ -4,8 +4,11 @@ body {
   padding: 0;
   font-family: 'Montserrat', sans-serif;
   scroll-behavior: smooth;
+  scrollbar-width: none;
 }
-
+::-webkit-scrollbar {
+  display: none;
+  }
 .navbar {
   top: 0;
   z-index: 100;
